
Major new features:

* The getent tool now supports the --no-addrconfig option. The output of
  getent with --no-addrconfig may contain addresses of families not
  configured on the current host i.e. as-if you had not passed
  AI_ADDRCONFIG to getaddrinfo calls.

The following bugs are resolved with this release:

  [12154] Do not fail DNS resolution for CNAMEs which are not host names
  [25812] Libio vtable protection is sometimes only partially enforced
  [28838] FAIL: elf/tst-p_align3
  [28846] CMSG_NXTHDR may trigger -Wstrict-overflow warning
  [28850] linux: __get_nprocs_sched reads uninitialized memory from the stack
  [28853] libc: tst-spawn6 changes current foreground process group
    (breaks test isolation)
  [28857] libc: FAIL: elf/tst-audit24a
  [28860] build: --enable-kernel=5.1.0 build fails because of missing
    __convert_scm_timestamps
  [28865] linux: _SC_NPROCESSORS_CONF and _SC_NPROCESSORS_ONLN are inaccurate
    without /sys and /proc
  [28868] dynamic-link: Dynamic loader DFS algorithm segfaults on
    missing libraries
  [28896] strncmp-avx2-rtm and wcsncmp-avx2-rtm fallback on non-rtm
    variants when avoiding overflow
  [28937] New DSO dependency sorter does not put new map first if in a cycle
  [28953] nss: Protect against errno changes in function lookup
  [29029] nptl: poll() spuriously returns EINTR during thread
    cancellation and with cancellation disabled
  [29062] elf: Fix memory leak in _dl_find_object_update
  [29078] <dlfcn.h> functions unusable during early auditing
  [29097] time: fchmodat does not handle 64 bit time_t for
    AT_SYMLINK_NOFOLLOW
  [29109] libc: posix_spawn() always returns 1 (EPERM) on clone()
    failure
  [29165] libc: [Regression] broken argv adjustment
  [29187] dynamic-link: [regression] broken argv adjustment for nios2
  [29203] libc: daemon is not y2038 aware
  [29204] libc: getusershell is not 2038 aware
  [29207] libc: posix_fallocate fallback implementation is not y2038